--- a/frontend/src/styles/notification.css
+++ b/frontend/src/styles/notification.css
@@ -13,13 +13,29 @@
   .admin-notifications li.unread {
     background-color: #f5f5f5;
   }
+
+  .admin-notifications li.read {
+    color: #f5f5f5;
+  }
   
   .notification-details {
     border: 1px solid #ddd;
     padding: 15px;
     margin-top: 15px;
+    color: #dddddd;
+  }
+
+  .notification-details p{
+    color: #f4dc09;
   }
   
+  .notification-details strong {
+    
+    padding: 5px;
+    margin-top: 15px;
+    color: #f6f6f6;
+  } 
+
   .notification-details .receipt img {
     max-width: 100%;
     height: auto;
