--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -5,7 +5,7 @@
     position: fixed;
     top: 55px;
     right: 0;
-    width: 350px;
+    width: 500px;
     height: 100%;
     background-color: #008080;
     border-radius: 15px 0 0 15px; /* Top-left and bottom-left corners rounded */
@@ -14,6 +14,10 @@
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     z-index: 5003;
+    display: flex; /* Enables flexbox */
+    flex-direction: row; /* Places items in a row */
+    padding: 10px;
+    gap: 10px; /* Adds spacing between items */
   }
   
   .profile-sidebar.open {
