--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -3,10 +3,10 @@
 .profile-sidebar {
 
     position: fixed;
-    top: 55px;
+    top: 50px;
     right: 0;
     width: 500px;
-    height: 100%;
+    height: 100vh;
     background-color: #008080;
     border-radius: 15px 0 0 15px; /* Top-left and bottom-left corners rounded */
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
@@ -53,4 +53,5 @@
     /* Add any other styles for hover effect */
   }
 
+  
   
